changed about page.

--- a/index.html
+++ b/index.html
@@ -1238,16 +1238,11 @@
 				</div>				
 				<div class='col-md-12' style='width:500px;'>					
 						<code>
-							<a href='https://www.linkedin.com/in/ivancapistran/' style='font-size:16px;'>Linkedin account</a> 
 							<br>
-							<a href='https://github.com/keymaker13' style='font-size:16px;'>Github account</a><br>
-							I began programming when I was 12 years old. My current goal is to master the art of computer programming.
-							I want to design a Playstation One Software Development Kit. It will be an IDE software that allows the user to drag and drop models and create video games for the 
-							Playstation One.
-							I want to create a C/C++ compiler and make my own libraries for the IDE. It is my hearts desire to study the C programming language specifically designed for 
-							the PlayStation One.
-							<br><br>
-							My latest Project I am working on is a Rubix Cube Game in JavaScript. 
+							<a href='https://www.linkedin.com/in/ivancapistran/' style='font-size:16px;border:1px solid black;'>Linkedin account</a> , 
+							<a href='https://github.com/keymaker13' style='font-size:16px;border:1px solid black;'>Github account</a><br>
+							
+							<br>
 							For this portfolio I am currently displaying it at a resolution size of 1024 x 768.
 							<br>
 							
