took off current projects

--- a/index.html
+++ b/index.html
@@ -1285,8 +1285,9 @@
 						<div class='col-md-4' style='border:1px solid black;height:100px;padding-top:10px;'>							
 							<div id='documents' style='width:100%;height:20px;border:1px solid black;box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);background:rgba(40,57,101,.8);color:snow;' onclick='openDocument(this.id)'> <span style='cursor:pointer;padding-left:15px;'> College Files </span> </div>
 							<br>
-							<div id='currentProjects' style='width:100%;height:20px;border:1px solid black;box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);background:rgba(40,57,101,.8);color:snow;' onclick='openDocument(this.id)'> <span style='cursor:pointer;padding-left:15px;'> Current Projects </span> </div>
-						</div>
+							<!-- <div id='currentProjects' style='width:100%;height:20px;border:1px solid black;box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);background:rgba(40,57,101,.8);color:snow;' onclick='openDocument(this.id)'> <span style='cursor:pointer;padding-left:15px;'> Current Projects </span> </div> 
+							-->
+							</div>
 						<div id='workPageDocumentsFolderList' class='col-md-8' style='border:1px solid black;overflow-y:auto;max-height:520px;padding-top:5px;'>																																	
 						</div>
 					</div>
