fixed html errors

--- a/index (from Laptop).html
+++ b/index (from Laptop).html
@@ -1306,7 +1306,7 @@
 			<div id='documentViewerNavigationBar' class='col-md-12' style='position:absolute;top:30px;'>
 				<span id='documentViewerFileNameSpan' style='margin-left:5px;font-size:20px;'>  </span>   				
 			</div>
-			<div id = 'viewerPageContentContainer' class='col-md-12' style='padding:0px 0px 0px 0px;'>
+			<div id = 'viewerPageContentContainer' class='col-md-12' style='padding:0px;0px;0px;0px;'>
 				<div id='viewerPageContent' class='col-md-12' style='position:absolute;top:65px;height:500px;background-color:Cornsilk;border:1px solid gray;overflow-y:auto;'> </div>
 				<!--<embed id='viewerPageContent' src='' class='col-md-12' style='position:absolute;top:65px;height:500px;background-color:Cornsilk;border:1px solid gray;'>-->
 			</div>		
@@ -1357,9 +1357,9 @@
 </div>
 
 
-<!-- Matrix Letters -->
-<script type='text/javascript'>
 
+<script type='text/javascript'>
+<!-- Matrix Letters -->
 
 
 var s = window.screen;
