--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
 <script src="Build/Cesium/Cesium.js"></script>
     <style>
       @import url(Build/Cesium/Widgets/widgets.css);
-      html,
-      body,
       #cesiumContainer {
         width: 100%;
         height: 100%;
@@ -1331,8 +1329,9 @@
 			//alert(data);
 			//convertToText = data;
 			//alert(convertToText);
-			
-			$('#viewerPageContent').html("<pre style='background-color:black;color:SpringGreen;'>" + data + "</pre>");
+			var sanitizedData = $('<div>').text(data).html();
+			//$('#viewerPageContent').html("<pre style='background-color:black;color:SpringGreen;'>" + data + "</pre>");
+			$('#viewerPageContent').html("<pre style='background-color:black;color:SpringGreen;'>" + sanitizedData + "</pre>");
 			
 		});
 		
