added access token for globe

--- a/index.html
+++ b/index.html
@@ -1636,6 +1636,7 @@
 
 
 <script type="text/javascript">
+	Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiIzMzk2NjFiZS1iODllLTQyNzItYjU0NS05Y2Y0ZjIwZmVkNDYiLCJpZCI6MzgwMzksImlhdCI6MTYwNTgyNTkwMn0.uPoeu3gUMRV4txl68cHgAmaGeBjO9YkbTfvBD-jKlj8';
 	var viewer = new Cesium.Viewer("cesiumContainer");
 </script>
 
