adding pages bug again.

--- a/mobile.html
+++ b/mobile.html
@@ -82,6 +82,11 @@
 
             document.getElementById("loader").innerHTML  = aboutMePage;    
         }
+
+        if (pageId == "documents"){
+
+            document.getElementById("loader").innerHTML = documentsPage;
+        }
     }
 
 
@@ -111,7 +116,7 @@
     </div>
     
     <div id ="loader" style="padding-left:16px">
-      Welcome to my portfolio via mobile phone. Please feel free to also look at the site on a desktop.
+      This is the mobile version of my portfolio. It is currently under construction. Please use a desktop to view my portfolio.
     </div>
     
     <!-- End smartphone / tablet look -->
@@ -126,26 +131,9 @@
         x.style.display = "block";
       }
     }
-
-
-
-
-
-
     </script>
 
 
 </body>
 </html>
 
-
-
-
-
-
-
-
-
-
-</body>
-</html>
