adding files again bug

--- a/index.html
+++ b/index.html
@@ -1512,7 +1512,7 @@
 						</div>				
 		</div>
 		
-		<div id='aboutPage'  style='width:600px;height:630px;background-color:white;border:1px solid black;padding:0px 0px 0px 0px;border-radius:5px 5px 5px 5px;display:none;'>			
+		<div id='aboutPage'  style='width:600px;height:650px;background-color:white;border:1px solid black;padding:0px 0px 0px 0px;border-radius:5px 5px 5px 5px;display:none;'>			
 				<div class='col-md-12' style='height:30px;background-color:blue;border-radius:5px 5px 5px 5px;padding: 0px 0px 0px 0px;top:0px;'> 
 					<div class='col-md-8' style='color:white;padding:5px 0px 0px 0px;'> <span  style='color:snow;margin-left:50px;font-size:16px;'> About Me </span> </div>
 					<div class='col-md-4' style='padding:0px 0px 0px 0px;'> 
@@ -1520,7 +1520,6 @@
 					</div>
 				</div>				
 				<div class='col-md-12' style='width:500px;'>					
-					<br>	
 					<code>
 						This is my portfolio website. I used plain javascript and jQuery. You can check out my social media.<br>
 								<a href='https://www.linkedin.com/in/ivancapistran/' style='font-size:16px;'>Linkedin</a> : 
@@ -1554,8 +1553,7 @@
 							<a href="https://github.com/KeyMaker13/c/blob/master/Advanced%20Programming%20Class/Homeworks/hw02/hw02.c">github link</a> <br>
 							<br>+ Worked a simulator of customers that interact with clerks. <br>
 							javaFiles/dataStructures/banksimulationproject/BufferedSimulationTester.java <br>
-							<a href="https://github.com/KeyMaker13/java/blob/master/DataStructuresClass/banksimulationproject/src/bank/BufferedSimulationTester.java">github link</a> <br>
-							 	
+							<a href="https://github.com/KeyMaker13/java/blob/master/DataStructuresClass/banksimulationproject/src/bank/BufferedSimulationTester.java">github link</a>
 					</code>	
 						<br>
 						
