adding files once more

--- a/index.html
+++ b/index.html
@@ -1382,7 +1382,7 @@
 
 				if (fileChecked == 2){
 
-					$('#viewerPageContent').html("<iframe src='https://docs.google.com/gview?url=http://ivancapistran.com/" + getDocumentFiles(fileName) +  "&embedded=true' style='width:680px;height:100%;'></iframe>");
+					$('#viewerPageContent').html("<iframe src='https://docs.google.com/gview?url=http://www.ivancapistran.com/" + getDocumentFiles(fileName) +  "&embedded=true' style='width:680px;height:100%;'></iframe>");
 					fileChecked = 0;
 					
 				} else {
@@ -1682,6 +1682,9 @@
 				<div id="cesiumContainer"></div>
 			</div>
 		</div>
+
+
+
 	
 	
 	</div>
