--- a/mobileC.html
+++ b/mobileC.html
@@ -1364,7 +1364,7 @@
 
 				if (fileChecked == 2){
 
-					$('#viewerPageContent').html("<iframe src='https://docs.google.com/gview?url=http://ivancapistran.com/" + getDocumentFiles(fileName) +  "&embedded=true' style='width:680px;height:100%;'></iframe>");
+					$('#viewerPageContent').html("<iframe src='https://docs.google.com/gview?url=http://www.ivancapistran.com/" + getDocumentFiles(fileName) +  "&embedded=true' style='width:680px;height:100%;'></iframe>");
 					fileChecked = 0;
 					
 				} else {
