--- a/mobileC.html
+++ b/mobileC.html
@@ -1358,7 +1358,7 @@
 
 			if (fileChecked == 1){
 
-				$('#viewerPageContent').html("<iframe src='"+ getDocumentFiles(fileName) + "' style='width:100%;height:100%;' ></iframe>");
+				$('#viewerPageContent').html("<iframe src='"+ getDocumentFiles(fileName) + "' style='width:650px;height:100%;' ></iframe>");
 				fileChecked = 0;
 			} else {
 
@@ -1370,7 +1370,7 @@
 				} else {
 
 					var sanitizedData = $('<div>').text(data).html();
-					$('#viewerPageContent').html("<pre style='background-color:black;color:SpringGreen;'>" + sanitizedData + "</pre>");
+					$('#viewerPageContent').html("<pre style='background-color:black;color:SpringGreen;width:650px;'>" + sanitizedData + "</pre>");
 
 
 
@@ -1494,7 +1494,7 @@
 	
 	<div id='desktopPages' class='desktopContainerDesktopPages' >						
 		<!-- Calculator -->
-		<div id='calculator' class=' calculatorContainer' >			
+		<div id='calculator' class=' calculatorContainer' style='height:350px;'>			
 				<div class='col-md-12 controlBar' style="height:80px;"> 
 					<div class='col-md-8 paddingNone' style='padding-top:5px;' > <span  style='color:snow;margin-left:50px;font-size:16px;'> Calculator </span> </div>
 					<div class='col-md-4 paddingNone' > 
@@ -1709,7 +1709,7 @@ var matrixLetters = document.getElementById('matrixLetters');
 //var height = matrixLetters.height = s.height*(0.60);
 var width = matrixLetters.width = s.width*(0.45);
 var height = matrixLetters.height = s.height*(0.60);
-var letters = Array(256).join(1).split('');
+var letters = Array(1024).join(1).split('');
 
 // y_pos > 768
 var draw = function () {
