Fixed the text color on the start menu

--- a/mobileC.html
+++ b/mobileC.html
@@ -1982,7 +1982,7 @@
 	<img id="globeIcon" src="globeicon.png" width="50" height="50" style='margin:5px 5px 5px 5px;z-index:5;'><br>
 	
 	
-	<div id='startMenu' style='width:150px;height:200px;box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);background:rgba(40,57,101,.8);z-index:100;bottom:30px;left:0px;position:absolute;display:none;padding:5px 5px 5px 5px;'>				
+	<div id='startMenu' style='width:150px;height:200px;box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);background:rgba(40,57,101,.8);z-index:100;bottom:30px;left:0px;position:absolute;display:none;padding:5px 5px 5px 5px;color:white;'>				
 		<img id="paintIcon" src="paintIcon.png" width="50" height="50" > Paint <br>		
 		<button class='btn btn-warning' onclick='off()' style='position:absolute;bottom:20px;'>Suspend</button>		
 	</div>
