Fixed the top bar on paint

--- a/mobileC.html
+++ b/mobileC.html
@@ -1957,13 +1957,13 @@
 
 
 		<div id='paintPage' style='width:600px;height:500px;background-color:white;border:1px solid black;padding:0px 0px 0px 0px;border-radius:5px 5px 5px 5px;display:none;'> 			
-			<div class='col-md-12' style='height:30px;background-color:blue;border-radius:5px 5px 5px 5px;padding: 0px 0px 0px 0px;top:0px;position:absolute;'> 
+			<div class='col-md-12' style='width:100%;height:80px;background-color:blue;border-radius:5px 5px 5px 5px;padding: 0px 0px 0px 0px;top:0px;position:absolute;'> 
 				<div class='col-md-8' style='color:white;padding:5px 0px 0px 0px;'> <span  style='color:snow;margin-left:50px;font-size:16px;'> Paint </span> </div>
 				<div class='col-md-4' style='padding:0px 0px 0px 0px;'> 
 					<button class='btn btn-warning' style='width:20px;height:25px;right:30px;position:absolute;' onclick='minPage(this.value)' value='paintPage'></button><button class='btn btn-danger' onclick='closePage(this.value)' value='paintPage' style='width:20px;height:25px;right:0px;position:absolute;'></button> 
 				</div>
 			</div>
-			<div style="width:100%;height:100%;position:absolute;margin-top:30px;">
+			<div style="width:100%;height:100%;position:absolute;margin-top:80px;">
 				<iframe style="width:100%;height:100%;" src="paint.html"> </iframe>
 			</div>
 		</div>
