Fixed the destinations

--- a/index.html
+++ b/index.html
@@ -194,13 +194,6 @@
   		})
 	});
 
-
-
-
-
-
-
-
 	/* Drag and Drop */
 	$( function() {
 	    $( "#aboutIcon" ).draggable( {containment: "parent"});
@@ -2308,7 +2301,7 @@
 			</div>
 		</div>
 
-		<div id='datastructuresPage' style='width:700px;height:600px;background-color:white;border:1px solid black;padding:0px 0px 0px 0px;border-radius:5px 5px 5px 5px;display:none;'>
+		<div id='datastructuresPage' style='width:1000px;height:700px;background-color:white;border:1px solid black;padding:0px 0px 0px 0px;border-radius:5px 5px 5px 5px;display:none;'>
 			<div class='col-md-12' style='height:30px;background-color:blue;border-radius:5px 5px 5px 5px;padding: 0px 0px 0px 0px;top:0px;position:absolute;'> 
 				<div class='col-md-8' style='color:white;padding:5px 0px 0px 0px;'> <span  style='color:snow;margin-left:50px;font-size:16px;'> Data Structures </span> </div>
 				<div class='col-md-4' style='padding:0px 0px 0px 0px;'> 
@@ -2318,42 +2311,42 @@
 			<div style="width:100%;height:100%;position:absolute;margin-top:30px;">
 				<div> 
 					<select id='datastructuresPageSelect' > 
-						<option value = "../datastructures/AVLtree.html"> AVL Tree </option>
-						<option value  = "../datastructures/BFS.html" > Breadth-First Search </option>
-						<option value = "../datastructures/BinomialQueue.html" > Binomial Queue </option>
-						<option value = "../datastructures/BPlusTree.html"> BPlusTree </option>
-						<option value = "../datastructures/BST.html" > BST </option>
-						<option value = "../datastructures/BTree.html"> BTree <option> 
-						<option value = "../datastructures/BucketSort.html" > Bucket Sort </option>
-						<option value = "../datastructures/ClosedHashBucket.html" > Closed Hash Bucket </option>
-						<option value = "../datastructures/ClosedHash.html" > Closed Hash </option>
-						<option value = "../datastructures/ComparisonSort.html" > Comparison Sort </option>
-						<option value = "../datastructures/ConnectedComponent.html" >  Connected Component </option>
+						<option value = "datastructures/AVLtree.html"> AVL Tree </option>
+						<option value  = "datastructures/BFS.html" > Breadth-First Search </option>
+						<option value = "datastructures/BinomialQueue.html" > Binomial Queue </option>
+						<option value = "datastructures/BPlusTree.html"> BPlusTree </option>
+						<option value = "datastructures/BST.html" > BST </option>
+						<option value = "datastructures/BTree.html"> BTree <option> 
+						<option value = "datastructures/BucketSort.html" > Bucket Sort </option>
+						<option value = "datastructures/ClosedHashBucket.html" > Closed Hash Bucket </option>
+						<option value = "datastructures/ClosedHash.html" > Closed Hash </option>
+						<option value = "datastructures/ComparisonSort.html" > Comparison Sort </option>
+						<option value = "datastructures/ConnectedComponent.html" >  Connected Component </option>
 						
-						<option value = "../datastructures/CountingSort.html"> Counting Sort </option>
-						<option value = "../datastructures/DFS.html" > DFS </option>
-						<option value = "../datastructures/Dijkstra.html" > Dijkstra </option>
-						<option value = "../datastructures/DisjointSets.html" > Disjoint Sets </option>
-						<option value = "../datastructures/Floyd.html" > Floyd </option>
-						<option value = "../datastructures/Heap.html" > Heap </option>
-						<option value = "../datastructures/HeapSort.html"> Heap Sort </option>
-						<option value = "../datastructures/Kruskal.html"> Kruskal </option>
-						<option value = "../datastructures/OpenHash.html" > Open Hash </option>
-						<option value = "../datastructures/Prim.html" > Prim </option>
-						<option value = "../datastructures/QueueArray.html" > Queue Array </option>
-						<option value = "../datastructures/QueueLL.html" > Queue LL </option>
-						<option value = "../datastructures/RadixSort.html" > Radix Sort </option>
-						<option value = "../datastructures/RedBlack.html"> Red Black </option>
-						<option value = "../datastructures/SimpleStack.html"> Simple Stack </option>
-						<option value = "../datastructures/SplayTree.html"> SplayTree </option>
-						<option value = "../datastructures/StackArray.html" > Stack Array </option>
-						<option value = "../datastructures/StackLL.html"> Stack LL </option>
-						<option value = "../datastructures/TopoSortDFS.html"> Topo Sort DFS </option>
-						<option value = "../datastructures/TopoSortIndegree.html" > Topo Sort Indegree </option>
+						<option value = "datastructures/CountingSort.html"> Counting Sort </option>
+						<option value = "datastructures/DFS.html" > DFS </option>
+						<option value = "datastructures/Dijkstra.html" > Dijkstra </option>
+						<option value = "datastructures/DisjointSets.html" > Disjoint Sets </option>
+						<option value = "datastructures/Floyd.html" > Floyd </option>
+						<option value = "datastructures/Heap.html" > Heap </option>
+						<option value = "datastructures/HeapSort.html"> Heap Sort </option>
+						<option value = "datastructures/Kruskal.html"> Kruskal </option>
+						<option value = "datastructures/OpenHash.html" > Open Hash </option>
+						<option value = "datastructures/Prim.html" > Prim </option>
+						<option value = "datastructures/QueueArray.html" > Queue Array </option>
+						<option value = "datastructures/QueueLL.html" > Queue LL </option>
+						<option value = "datastructures/RadixSort.html" > Radix Sort </option>
+						<option value = "datastructures/RedBlack.html"> Red Black </option>
+						<option value = "datastructures/SimpleStack.html"> Simple Stack </option>
+						<option value = "datastructures/SplayTree.html"> SplayTree </option>
+						<option value = "datastructures/StackArray.html" > Stack Array </option>
+						<option value = "datastructures/StackLL.html"> Stack LL </option>
+						<option value = "datastructures/TopoSortDFS.html"> Topo Sort DFS </option>
+						<option value = "datastructures/TopoSortIndegree.html" > Topo Sort Indegree </option>
 					</select>  Insert values in the box to animate the data structure.
 				</div>
 
-				<iframe id = "datastructuresPageIframe" style="width:100%;height:100%;" src="../datastructures/index.html" > </iframe>
+				<iframe id = "datastructuresPageIframe" style="width:100%;height:100%;" src="datastructures/index.html" > </iframe>
 			</div>
 		</div>
 
