Finishing data structures.
made the desktop full screen too.

--- a/datastructures/index.html
+++ b/datastructures/index.html
@@ -6,9 +6,71 @@
 
 </head>
 
-<body>
+<body style='height:100%;background-color:black;color:lightgreen;'>
          
-Use the select feature above to check out a data structure.
+<h1>Use the select feature above to check out a data structure. </h1> <br>
+
+<div style='width:300px;position:absolute;top:50px;'> 
+<ul>Basics
+<li> Stack: Array Implementation</li>
+<li> Stack: Linked List Implementation </li>
+<li>  Queues: Array Implementation </li>
+<li> Queues: Linked List Implementation </li>
+</ul>
+
+
+
+<ul> Indexing
+<li> Binary Search Trees </li>
+<li> AVL Trees (Balanced binary search trees) </li>
+<li> Red-Black Trees </li>
+<li> Splay Trees </li>
+<li > Open Hash Tables (Closed Addressing) </li>
+<li > Closed Hash Tables (Open Addressing) </li>
+<li> Closed Hash Tables, using buckets </li>
+<li> B Trees </li>
+<li> B+ Trees </li>
+</ul>
+
+<ul > Sorting
+<li> Bubble Sort </li>
+<li>  Selection Sort </li>
+<li> Insertion Sort </li>
+<li> Shell Sort </li>
+<li> Merge Sort </li>
+<li> Quck Sort </li>
+<li> Bucket Sort </li>
+<li> Counting Sort </li>
+<li> Radix Sort </li>
+</ul>
+</div>
+
+<div style='width:300px;position:absolute;top:50px;left:350px;'> 
+<ul> Heap-like Data Structures
+<li> Heaps </li>
+<li > Binomial Queues </li>
+</ul>
+
+<ul> Graph Algorithms
+<li> Breadth-First Search </li>
+<li> Depth-First Search </li>
+<li> Connected Components </li>
+<li> Dijkstra's Shortest Path </li>
+<li> Prim's Minimum Cost Spanning Tree </li>
+<li > Topological Sort (Using Indegree array) </li>
+<li> Topological Sort (Using DFS) </li>
+<li> Floyd-Warshall (all pairs shortest paths) </li>
+<li> Kruskal Minimum Cost Spanning Tree Algorithm </li>
+</ul>
+
+
+<ul> Others
+<li> Disjoint Sets </li>
+</ul>
+</div>
+
+
+
 
 </body>
 </html>
