added javascript and php icons

--- a/index.html
+++ b/index.html
@@ -2367,12 +2367,16 @@
 	<img id="globeIcon" src="globeicon.png" width="50" height="50" style='margin:5px 5px 5px 5px;z-index:5;'><br>
 	
 	
-	<div id='startMenu' style='width:200px;height:200px;box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);background:rgba(40,57,101,.8);z-index:100;bottom:30px;left:0px;position:absolute;display:none;padding:5px 5px 5px 5px;color:white;'>				
+	<div id='startMenu' style='width:200px;height:400px;box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);background:rgba(40,57,101,.8);z-index:100;bottom:30px;left:0px;position:absolute;display:none;padding:5px 5px 5px 5px;color:white;'>				
 		
 		<img id="paintIcon" src="paintIcon.png" width="50" height="50" > Paint <br>	
 		
 		
 		<img id="datastructuresIcon" src="datastructuresIcon.png" width="50" height="50" > Data Structures <br>	
+
+		<img id ="javascriptIcon" src="icons/javascriptIcon.png" width="50" height="50" > JavaScript <br>
+
+		<img id="phpIcon" src="icons/phpIcon.png" width="50" height="50"> PHP <br>
 		
 		<button class='btn btn-warning' onclick='off()' style='position:absolute;bottom:20px;'>Suspend</button>		
 	</div>
