--- a/index.html
+++ b/index.html
@@ -2563,21 +2563,9 @@
 					<p style='width:500px;height:300px;'>
 						Email : ivancapistran@programmer.net. This is my portfolio website. I used plain javascript and jQuery. 
 						To work with the directory I used a perl script to create a javascript file that lists all the 
-						file locations.	You can check out my social media. Be sure to check out my linkedin page. 
-						The pages that pop are draggable. The main highlight is browsing all my college code.<br>
-								<a href='https://www.linkedin.com/in/ivancapistran/' style='font-size:16px;'>Linkedin</a> : 
-								<a href='https://github.com/keymaker13' style='font-size:16px;'>Github</a> :
-								<a href='https://www.facebook.com/KeyMaker13/' style='font-size:16px;'> Facebook </a> : 
-								<a href='https://twitter.com/IvanCapistran13' style='font-size:16px;'> Twitter </a> :
-								<a href='https://www.instagram.com/ivancapistran13/' style='font-size:16px;'> Instagram </a> :
-								<a href='https://imgur.com/user/keymaker13' style='font-size:16px;'> Imgur </a> :
-								<a href='https://www.pinterest.com/ivancapistran13/_saved/' style='font-size:16px;'> Pinterest </a> : 
-								<a href='https://www.reddit.com/user/codecaptain' style='font-size:16px;'> Reddit </a> : 
-								<a href='https://www.tiktok.com/@ivancapistran?lang=en' style='font-size:16px;'> Tiktok </a> : 
-								<a href='https://codecaptain.tumblr.com' style='font-size:16px;'> Tumblr1 </a> : 
-								<a href='https://keymaker13.tumblr.com' style='font-size:16px;'> Tumblr2 </a> : 
-								<a href='https://stackoverflow.com/users/2926236/keymaker13' style='font-size:16px;'> Stackoverflow </a> :
-								<a href='https://steamcommunity.com/id/ivancapistran/' style='font-size:16px;'> Steam </a> :								
+						file locations. The pages that pop are draggable. The main highlight is browsing all my college code.<br>
+								
+								<a href='https://github.com/keymaker13' style='font-size:16px;'>Github</a>
 							<br>
 							
 							This Portfolio has the directory folder and listing of college files.<br>
