--- a/index.html
+++ b/index.html
@@ -2365,8 +2365,8 @@
 
 			if (fileChecked == 1){
 
-				//$('#viewerPageContent').html("<iframe src='"+ getDocumentFiles(fileName) + "' style='width:100%;height:100%;' ></iframe>");
-				$('#viewerPageContent').html("<iframe src='https://docs.google.com/gview?url=http://www.ivancapistran.com/" + getDocumentFiles(fileName) +  "&embedded=true' style='width:680px;height:300px;'></iframe>");
+		$('#viewerPageContent').html("<iframe src='"+ getDocumentFiles(fileName) + "' style='width:100%;height:100%;' ></iframe>");
+				//$('#viewerPageContent').html("<iframe src='https://docs.google.com/gview?url=http://www.ivancapistran.com/" + getDocumentFiles(fileName) +  "&embedded=true' style='width:680px;height:300px;'></iframe>");
 				fileChecked = 0;
 			} else {
 
